--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,15 @@
 <div class="login-container">
-    <h2>Login</h2>
-    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-    <form (ngSubmit)="login()">
-      <div>
-        <label>Username:</label>
-        <input [(ngModel)]="username" name="username" required />
-      </div>
-      <div>
-        <label>Password:</label>
-        <input type="password" [(ngModel)]="password" name="password" required />
-      </div>
-      <button type="submit">Login</button>
-    </form>
-  </div>
-  
+  <h2>Login</h2>
+  <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+  <form (ngSubmit)="login()">
+    <div>
+      <label for="username">Username:</label>
+      <input id="username" type="text" [(ngModel)]="username" name="username" required />
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input id="password" type="password" [(ngModel)]="password" name="password" required />
+    </div>
+    <button type="submit">Login</button>
+  </form>
+</div>
