--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="login-container">
   <h2>Login</h2>
-  <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   <form (ngSubmit)="login()">
-    <div>
+    <div class="form-group">
       <label for="username">Username:</label>
       <input id="username" type="text" [(ngModel)]="username" name="username" required />
     </div>
-    <div>
+    <div class="form-group">
       <label for="password">Password:</label>
       <input id="password" type="password" [(ngModel)]="password" name="password" required />
     </div>
     <button type="submit">Login</button>
   </form>
+  <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
 </div>
