--- a/src/app/protected/protected.component.html
+++ b/src/app/protected/protected.component.html
@@ -53,7 +53,8 @@
       </ul>
     </div>
     <div *ngIf="notifications.length === 0">
-      <p>No new notifications.</p>
+      <p class="empty-message">No new notifications.</p>
     </div>
   </div>
+  
 </div>
